--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
     "description": "Node-RED App using Blynk for Remote Garage Door Opener",
     "version": "0.0.1",
     "dependencies": {
-        "node-red-contrib-blynk-ws": "1.0.3",
         "node-red-node-pi-gpio": "1.0.9",
-        "node-red-contrib-homebridge-automation": "0.0.72"
+        "node-red-contrib-homebridge-automation": "0.0.72",
+        "node-red-contrib-blynk-iot": "1.0.0",
+        "node-red-contrib-moment": "5.0.0",
+        "node-red-contrib-remote": "1.5.2",
+        "node-red-contrib-ui-led": "0.4.11",
+        "node-red-dashboard": "3.6.2",
+        "node-red-node-twilio": "0.1.0"
     },
     "node-red": {
         "settings": {
